@@ -3,6 +3,8 @@ NEWS - OpenPrinting CUPS Filters v1.0.48 - 2014-03-12
 
 CHANGES IN V1.0.49
 
+	- pdftops: Use Poppler also for Toshiba printers (Ubuntu bug
+	  #998087).
 	- pdftops: Fixed typo which always made PostScript level 2 being
 	  generated when using Poppler's pdftops (Ubuntu bug #1294370).
 
